--- a/source-css/bloomjackquisition.css
+++ b/source-css/bloomjackquisition.css
@@ -1263,3 +1263,11 @@ a[href="/ableave"]{
     height:128px;
     background-position: -420px -490px;
 }
+a[href="/rdloop"]{
+    display:block;
+    clear:none;
+    float:left;
+    width:192px;
+    height:192px;
+    background-image: url(%%RDloop%%) !important;
+}
