--- a/source-css/flashsentry.css
+++ b/source-css/flashsentry.css
@@ -327,7 +327,7 @@ a[href|="/ajhappy"],a[href|="/happlejack"],a[href|="/ppshrug"],a[href|="/flutter
   background-position:0 -300%;
 }
 
-a[href|="/raritydaww"],a[href|="/rraritydaww"],a[href|="/fluttershh"],a[href|="/rfluttershh"],a[href|="/ajfrown"],a[href|="/rajfrown"],a[href|="/huhhuh"],a[href|="/rhuhhuh"],a[href|="/guard"],a[href|="/rguard"],.flair-mac,.side .md table tr:nth-of-type(9) td:nth-of-type(1):after {
+a[href|="/raritydaww"],a[href|="/rraritydaww"],a[href|="/fluttershh"],a[href|="/rfluttershh"],a[href|="/ajfrown"],a[href|="/rajfrown"],a[href|="/huhhuh"],a[href|="/rhuhhuh"],a[href|="/guard"],a[href|="/rguard"],a[href|="/myhair"],a[href|="/flusteredflash"],a[href|="/flusteredfs"],.flair-mac,.side .md table tr:nth-of-type(9) td:nth-of-type(1):after {
   background-position:0 -400%;
 }
 
@@ -416,11 +416,11 @@ a[href|="/lunawait"],a[href|="/rlunawait"],a[href|="/raritydress"],a[href|="/rra
   background-position:-100% -200%;
 }
 
-a[href|="/ppfear"],a[href|="/pinkiefear"],a[href|="/rppfear"],a[href|="/rpinkiefear"],a[href|="/spikenervous"],a[href|="/newrainbowdash"],a[href|="/rspikenervous"],a[href|="/rnewrainbowdash"],a[href|="/gross"],a[href|="/rgross"],a[href|="/sbstare"],a[href|="/rsbstare"],.flair-bonbon,.side .md table tr:nth-of-type(7) td:nth-of-type(2):after {
+a[href|="/ppfear"],a[href|="/pinkiefear"],a[href|="/rppfear"],a[href|="/rpinkiefear"],a[href|="/spikenervous"],a[href|="/newrainbowdash"],a[href|="/rspikenervous"],a[href|="/rnewrainbowdash"],a[href|="/gross"],a[href|="/rgross"],a[href|="/sbstare"],a[href|="/rsbstare"],a[href|="/rockerflash"],a[href|="/rockerfs"],.flair-bonbon,.side .md table tr:nth-of-type(7) td:nth-of-type(2):after {
   background-position:-100% -300%;
 }
 
-a[href|="/scootacheer"],a[href|="/lootascoo"],a[href|="/rscootacheer"],a[href|="/rlootascoo"],a[href|="/flutteryay"],a[href|="/rflutteryay"],a[href|="/hmmm"],a[href|="/rhmmm"],a[href|="/absmile"],a[href|="/rabsmile"],.flair-colgate,.side .md table tr:nth-of-type(9) td:nth-of-type(2):after {
+a[href|="/scootacheer"],a[href|="/lootascoo"],a[href|="/rscootacheer"],a[href|="/rlootascoo"],a[href|="/flutteryay"],a[href|="/rflutteryay"],a[href|="/hmmm"],a[href|="/rhmmm"],a[href|="/absmile"],a[href|="/rabsmile"],a[href|="/flashgasp"],a[href|="/fsgasp"],.flair-colgate,.side .md table tr:nth-of-type(9) td:nth-of-type(2):after {
   background-position:-100% -400%;
 }
 
@@ -500,11 +500,11 @@ a[href|="/paperbagderpy"],a[href|="/paperbagwizard"],a[href|="/derpwizard"],a[hr
   background-position:-200% -200%;
 }
 
-a[href|="/twibeam"],a[href|="/rtwibeam"],a[href|="/noooo"],a[href|="/rnoooo"],a[href|="/derpyhappy"],a[href|="/rderpyhappy"],a[href|="/berry"],a[href|="/punchdrunk"],a[href|="/rberry"],a[href|="/rpunchdrunk"],.flair-octavia,.side .md table tr:nth-of-type(7) td:nth-of-type(3):after {
+a[href|="/twibeam"],a[href|="/rtwibeam"],a[href|="/noooo"],a[href|="/rnoooo"],a[href|="/derpyhappy"],a[href|="/rderpyhappy"],a[href|="/berry"],a[href|="/punchdrunk"],a[href|="/rberry"],a[href|="/rpunchdrunk"],a[href|="/frustratedflash"],a[href|="/frustratedfs"],.flair-octavia,.side .md table tr:nth-of-type(7) td:nth-of-type(3):after {
   background-position:-200% -300%;
 }
 
-a[href|="/squintyjack"],a[href|="/rsquintyjack"],a[href|="/joy"],a[href|="/rjoy"],a[href|="/dealwithit"],a[href|="/rdealwithit"],.flair-berry,.side .md table tr:nth-of-type(9) td:nth-of-type(3):after {
+a[href|="/squintyjack"],a[href|="/rsquintyjack"],a[href|="/joy"],a[href|="/rjoy"],a[href|="/dealwithit"],a[href|="/rdealwithit"],a[href|="/flashhey"],a[href|="/fshey"],.flair-berry,.side .md table tr:nth-of-type(9) td:nth-of-type(3):after {
   background-position:-200% -400%;
 }
 
@@ -589,7 +589,7 @@ a[href|="/abmeh"],a[href|="/rabmeh"],a[href|="/rdwut"],a[href|="/rrdwut"],a[href
   background-position:-300% -200%;
 }
 
-a[href|="/scootaderp"],a[href|="/didneyworl"],a[href|="/DIDNEYWORL"],a[href|="/rscootaderp"],a[href|="/rdidneyworl"],a[href|="/rDIDNEYWORL"],a[href|="/twidaw"],a[href|="/rtwidaw"],a[href|="/dj"],a[href|="/threedog"],a[href|="/rdj"],a[href|="/rthreedog"],a[href|="/maud"],a[href|="/rmaud"],.flair-doctor,.side .md table tr:nth-of-type(7) td:nth-of-type(4):after {
+a[href|="/scootaderp"],a[href|="/didneyworl"],a[href|="/DIDNEYWORL"],a[href|="/rscootaderp"],a[href|="/rdidneyworl"],a[href|="/rDIDNEYWORL"],a[href|="/twidaw"],a[href|="/rtwidaw"],a[href|="/dj"],a[href|="/threedog"],a[href|="/rdj"],a[href|="/rthreedog"],a[href|="/maud"],a[href|="/rmaud"],a[href|="/flashhmm"],a[href|="/fshmm"],.flair-doctor,.side .md table tr:nth-of-type(7) td:nth-of-type(4):after {
   background-position:-300% -300%;
 }
 
@@ -780,7 +780,7 @@ END-PONYSCRIPT-IGNORE {color: red}
   text-align:center;
 }
 
-a[href|="/uncertainflash"],a[href|="/uncertainfs"],a[href|="/embarrassedflash"],a[href|="/embarrassedfs"],a[href|="/noproblem"],a[href|="/fsnoproblem"],a[href|="/fsdetermination"],a[href|="/waifustealer"],a[href|="/flashapproves"],a[href|="/fsapproves"],a[href|="/flashonduty"],a[href|="/flatteredflash"],a[href|="/flatteredfs"],a[href|="/proudflash"],a[href|="/proudfs"],a[href|="/cuteflash"],a[href|="/cutefs"],a[href|="/confusedflash"],a[href|="/confusedfs"],a[href|="/puzzledflash"],a[href|="/seriously"],a[href|="/flashseriously"],a[href|="/fsseriously"],a[href|="/squintyflash"],a[href|="/squintyfs"],a[href|="/zombieflash"],a[href|="/zombiefs"],a[href|="/suspiciousflash"],a[href|="/suspiciousfs"] {
+a[href|="/uncertainflash"],a[href|="/uncertainfs"],a[href|="/embarrassedflash"],a[href|="/embarrassedfs"],a[href|="/noproblem"],a[href|="/fsnoproblem"],a[href|="/fsdetermination"],a[href|="/waifustealer"],a[href|="/flashapproves"],a[href|="/fsapproves"],a[href|="/flashonduty"],a[href|="/flatteredflash"],a[href|="/flatteredfs"],a[href|="/proudflash"],a[href|="/proudfs"],a[href|="/cuteflash"],a[href|="/cutefs"],a[href|="/confusedflash"],a[href|="/confusedfs"],a[href|="/puzzledflash"],a[href|="/seriously"],a[href|="/flashseriously"],a[href|="/fsseriously"],a[href|="/squintyflash"],a[href|="/squintyfs"],a[href|="/zombieflash"],a[href|="/zombiefs"],a[href|="/suspiciousflash"],a[href|="/suspiciousfs"],a[href|="/rockerflash"],a[href|="/rockerfs"],a[href|="/frustratedflash"],a[href|="/frustratedfs"],a[href|="/flashhmm"],a[href|="/fshmm"],a[href|="/myhair"],a[href|="/flusteredflash"],a[href|="/flusteredfs"],a[href|="/flashgasp"],a[href|="/fsgasp"],a[href|="/flashhey"],a[href|="/fshey"] {
   display:block;
   clear:none;
   float:left;
