--- a/source-css/mylittleandysonic1.css
+++ b/source-css/mylittleandysonic1.css
@@ -12,6 +12,8 @@ cursor: url(%%cursor2%%), default !important;
 a { cursor: url(%%cursor1%%), pointer; }
 
 
+
+
 /* Changes background  */
 
  body:first-of-type, body.res-nightmode:first-of-type {
@@ -31,7 +33,7 @@ a { cursor: url(%%cursor1%%), pointer; }
 
 
  #header #header-bottom-left {
-   background: url(%%cat%%) 50% 28px !important;
+   background: url(%%geybanner%%) 50% 0px !important;
    background-repeat: no-repeat!important;
    background-position: 35% 0px;
 }
