--- a/source-css/mylittlechaos.css
+++ b/source-css/mylittlechaos.css
@@ -271,10 +271,20 @@ a[href|="/yasickfuck"], a[href|="/yasickfreak"] {
     clear: none;
     float: left;
     }
+
 a[href|="/youtooktwoshots"] {
     width: 300px;
     height: 250px;
     background-image: url(%%youtooktwoshots%%);
+    display: block;
+    clear: none;
+    float: left;
+    }
+
+a[href|="/thepineappleguy"] {
+    width: 455px;
+    height: 549px;
+    background-image: url(%%thepineappleguy%%);
     display: block;
     clear: none;
     float: left;
