--- a/source-css/mylittlegaming.css
+++ b/source-css/mylittlegaming.css
@@ -69,7 +69,7 @@ transform: translate(-50%, 0);
   left: 0px;
   top: 0px;
   position: absolute;
-  width: 7504px;
+  width: 8714px;
   height: 150px;
   display: block;
   -webkit-animation: sidescroll 190s linear infinite;
@@ -83,7 +83,7 @@ transform: translate(-50%, 0);
     -webkit-transform: translateX(0px);
 }
   to {
-    -webkit-transform: translateX(-3752px);
+    -webkit-transform: translateX(-4357px);
   }
 }
 
@@ -92,7 +92,7 @@ transform: translate(-50%, 0);
     -moz-transform: translateX(0px);
   }
   to {
-    -moz-transform: translateX(-3752px);
+    -moz-transform: translateX(-4357px);
   }
 }
 
@@ -101,7 +101,7 @@ transform: translate(-50%, 0);
     transform: translateX(0px);
   }
   to {
-    transform: translateX(-3752px);
+    transform: translateX(-4357px);
   }
 }
 
@@ -146,11 +146,11 @@ div#header-bottom-left ul.tabmenu {
 
 body {
   background-color: #fff !important;
-  background: url(%%MLGBG%%) no-repeat fixed center bottom;
+  background: url(%%MLGBG5%%) no-repeat fixed center bottom;
 }
 
 .res-nightmode body {
-  background: url(%%MLGBG%%) no-repeat fixed center bottom;
+  background: url(%%MLGBG5%%) no-repeat fixed center bottom;
 }
 
 /*Submission Buttons*/
