--- a/source-css/ponymotes.css
+++ b/source-css/ponymotes.css
@@ -447,7 +447,7 @@ a[href|="/twithatsnice"], a[href|="/buysomeapples"], a[href|="/cadsoawesome"], a
 {background-image:url(%%70x70b%%);width:70px;height:70px;display:block;float:left;}
 
 /* 70x70c 'motes */
-a[href|="/trixcookie"], a[href|="/spitfirejudge"], a[href|="/marblescared"], a[href|="/apathiawhat"], a[href|="/changelingsad"], a[href|="/sadtwilight"], a[href|="/sadtwilight2"], a[href|="/twicheesy"], a[href|="/fritterugh"], a[href|="/frittugh"], a[href|="/celestiahh"], a[href|="/nervoustrixie"], a[href|="/youkickedthepuppy"], a[href|="/disreally"], a[href|="/ssshy"], a[href|="/ajangry"], a[href|="/twidisappointed"], a[href|="/sadscoots"], a[href|="/rdspeechless"], a[href|="/scootadrunk"], a[href|="/didneyland"], a[href|="/DIDNEYLAND"], a[href|="/ssawe"], a[href|="/crazyfs"], a[href|="/fstwicrazy"], a[href|="/flutterconfused"], a[href|="/changelingmad"], a[href|="/celoohshiny"], a[href|="/mayormare"], a[href|="/ppcuteshrug"], a[href|="/riffyeah"], a[href|="/supersmugdash"], a[href|="/rdyes"], a[href|="/starlightbeam"], a[href|="/nervousshy"], a[href|="/quibblepants"], a[href|="/moondancerexcited"], a[href|="/ajuwotm8"], a[href|="/ajuwatm8"], a[href|="/celestiawtf"], a[href|="/dragonlordtorch"], a[href|="/rdwutbag"], a[href|="/moondancercrazy"], a[href|="/moondancersquint"], a[href|="/whofarted"], a[href|="/ajwingspanked"], a[href|="/sadtwilight3"], a[href|="/yaksmash"], a[href|="/twiwatstare"], a[href|="/zecoraponder"], a[href|="/twilightpbbt"], a[href|="/celestiapout"], a[href|="/pinkiesly"], a[href|="/flurrywink"]
+a[href|="/trixcookie"], a[href|="/spitfirejudge"], a[href|="/marblescared"], a[href|="/apathiawhat"], a[href|="/changelingsad"], a[href|="/sadtwilight"], a[href|="/sadtwilight2"], a[href|="/twicheesy"], a[href|="/fritterugh"], a[href|="/frittugh"], a[href|="/celestiahh"], a[href|="/nervoustrixie"], a[href|="/youkickedthepuppy"], a[href|="/disreally"], a[href|="/ssshy"], a[href|="/ajangry"], a[href|="/twidisappointed"], a[href|="/sadscoots"], a[href|="/rdspeechless"], a[href|="/scootadrunk"], a[href|="/didneyland"], a[href|="/DIDNEYLAND"], a[href|="/ssawe"], a[href|="/crazyfs"], a[href|="/fstwicrazy"], a[href|="/flutterconfused"], a[href|="/changelingmad"], a[href|="/celoohshiny"], a[href|="/mayormare"], a[href|="/ppcuteshrug"], a[href|="/riffyeah"], a[href|="/supersmugdash"], a[href|="/rdyes"], a[href|="/starlightbeam"], a[href|="/nervousshy"], a[href|="/quibblepants"], a[href|="/moondancerexcited"], a[href|="/ajuwotm8"], a[href|="/ajuwatm8"], a[href|="/celestiawtf"], a[href|="/dragonlordtorch"], a[href|="/rdwutbag"], a[href|="/moondancercrazy"], a[href|="/moondancersquint"], a[href|="/whofarted"], a[href|="/ajwingspanked"], a[href|="/sadtwilight3"], a[href|="/yaksmash"], a[href|="/twiwatstare"], a[href|="/zecoraponder"], a[href|="/twilightpbbt"], a[href|="/celestiapout"], a[href|="/pinkiesly"], a[href|="/flurrywink"], a[href|="/derpypuzzled"], a[href|="/derpywink"], a[href|="/derpyworry"], a[href|="/starlightscience"], a[href|="/derpyohno"], a[href|="/sunsetdisturbed"]
 {background-image:url(%%70x70c%%);width:70px;height:70px;display:block;float:left;}
 
 /* 100x100a 'motes. */
@@ -491,7 +491,7 @@ a[href|="/boopening"], a[href|="/agentt"], a[href|="/hoodiedash"], a[href|="/shy
 {background-image:url(%%150x150e%%);width:150px;height:150px;display:block;float:left;}
 
 /* 150x150f 'motes */
-a[href|="/twitation"], a[href|="/yourexistenceannoysme"], a[href|="/apfle"], a[href|="/derpystop"], a[href|="/abstop"], a[href|="/octilewd"], a[href|="/fingerguns"], a[href|="/thatswhereyourewrongkiddo"], a[href|="/twiyoudontsay"], a[href|="/thatslewd"]
+a[href|="/twitation"], a[href|="/yourexistenceannoysme"], a[href|="/apfle"], a[href|="/derpystop"], a[href|="/abstop"], a[href|="/octilewd"], a[href|="/fingerguns"], a[href|="/thatswhereyourewrongkiddo"], a[href|="/twiyoudontsay"], a[href|="/thatslewd"], a[href|="/twiapathy"]
 {background-image:url(%%150x150f%%);width:150px;height:150px;display:block;float:left;}
 
 /* 200x200a 'motes. */
@@ -499,7 +499,7 @@ a[href|="/regret"], a[href|="/pinkiemail"], a[href|="/obsessivetrixie"], a[href|
 {background-image:url(%%200x200a%%);width:200px;height:200px;display:block;float:left;}
 
 /* 200x200b 'motes. */
-a[href|="/rariluna"], a[href|="/superalicorn"], a[href|="/sursilly"], a[href|="/fluttersnake"], a[href|="/zecoracarry"], a[href|="/sunsetmaid"], a[href|="/sweepsweepsweep"], a[href|="/faustilicious"]
+a[href|="/rariluna"], a[href|="/superalicorn"], a[href|="/sursilly"], a[href|="/fluttersnake"], a[href|="/zecoracarry"], a[href|="/sunsetmaid"], a[href|="/sweepsweepsweep"], a[href|="/faustilicious"], a[href|="/waifuwarrior"]
 {background-image:url(%%200x200b%%);width:200px;height:200px;display:block;float:left;}
 
 /* 250x250a 'motes. */
@@ -572,7 +572,7 @@ a[href|="/flscrunch"], a[href|="/downcastspike"], a[href|="/lyraseewhatyoudidthe
 {background-image:url(%%misfitso%%);display:block;float:left;}
 
 /* Misfits p */
-a[href|="/celestiawat"], a[href|="/hellodarkness"], a[href|="/discordross"], a[href|="/fluttersmugsmall"], a[href|="/reasonablysizedfluttersmug"], a[href|="/smugpuppykicking"], a[href|="/ppspooks"], a[href|="/trixiedisgust"], a[href|="/chairmanstarlight"], a[href|="/chairmarestarlight"], a[href|="/sodacookie"], a[href|="/sadhug"], a[href|="/octyvinylboop"], a[href|="/sunburstwat"], a[href|="/lyrahandsarejustright"], a[href|="/rescuehappy"], a[href|="/batdash"], a[href|="/tiawing"], a[href|="/dontsleeptonight"], a[href|="/buttstho"], a[href|="/humantwiblush"], a[href|="/dashplace"]
+a[href|="/celestiawat"], a[href|="/hellodarkness"], a[href|="/discordross"], a[href|="/fluttersmugsmall"], a[href|="/reasonablysizedfluttersmug"], a[href|="/smugpuppykicking"], a[href|="/ppspooks"], a[href|="/trixiedisgust"], a[href|="/chairmanstarlight"], a[href|="/chairmarestarlight"], a[href|="/sodacookie"], a[href|="/sadhug"], a[href|="/octyvinylboop"], a[href|="/sunburstwat"], a[href|="/lyrahandsarejustright"], a[href|="/rescuehappy"], a[href|="/batdash"], a[href|="/tiawing"], a[href|="/dontsleeptonight"], a[href|="/buttstho"], a[href|="/humantwiblush"], a[href|="/dashplace"], a[href|="/tavibedhead"]
 {background-image:url(%%misfitsp%%);display:block;float:left;}
 
 /*
@@ -612,11 +612,11 @@ a[href|="/twiimbetterthanyou"], a[href|="/twimbetterthanyou"], a[href|="/neutral
 {background-position: -100% -200%;}
 
 /* Grid pos 2,2 'motes */
-a[href|="/bonboudicca"], a[href|="/celticbonbon"], a[href|="/fluttereyebrow"], a[href|="/fillyfirefly"], a[href|="/woonabounce"], a[href|="/nerdscratch"], a[href|="/rdtsundere"], a[href|="/twiburger"], a[href|="/celestiaiswatching"], a[href|="/apathiablank"], a[href|="/vinylderp"], a[href|="/clearlestia"], a[href|="/fritterugh"], a[href|="/frittugh"], a[href|="/trixieface"], a[href|="/ikickedthepuppy"], a[href|="/thatslewd"]
+a[href|="/bonboudicca"], a[href|="/celticbonbon"], a[href|="/fluttereyebrow"], a[href|="/fillyfirefly"], a[href|="/woonabounce"], a[href|="/nerdscratch"], a[href|="/rdtsundere"], a[href|="/twiburger"], a[href|="/celestiaiswatching"], a[href|="/apathiablank"], a[href|="/vinylderp"], a[href|="/clearlestia"], a[href|="/fritterugh"], a[href|="/frittugh"], a[href|="/trixieface"], a[href|="/ikickedthepuppy"], a[href|="/thatslewd"], a[href|="/waifuwarrior"]
 {background-position: -200% -200%;}
 
 /* Grid pos 0,3 'motes */
-a[href|="/whatatwist"],  a[href|="/hnng"], a[href|="/smugcolgate"], a[href|="/rdwat"], a[href|="/nerddash"], a[href|="/fsfascinating"], a[href|="/princessdiscord"], a[href|="/comehugmebro"], a[href|="/hugmebro"], a[href|="/apathiaconcern"], a[href|="/angryaj"], a[href|="/pearsteve"], a[href|="/nerddaring"], a[href|="/celestiahh"], a[href|="/sadspike"]
+a[href|="/whatatwist"],  a[href|="/hnng"], a[href|="/smugcolgate"], a[href|="/rdwat"], a[href|="/nerddash"], a[href|="/fsfascinating"], a[href|="/princessdiscord"], a[href|="/comehugmebro"], a[href|="/hugmebro"], a[href|="/apathiaconcern"], a[href|="/angryaj"], a[href|="/pearsteve"], a[href|="/nerddaring"], a[href|="/celestiahh"], a[href|="/sadspike"], a[href|="/twiapathy"]
 {background-position: 0% -300%;}
 
 /* Grid pos 1,3 'motes */
@@ -772,27 +772,27 @@ a[href|="/rarirdcry"], a[href|="/raridoubt"], a[href|="/flurrywink"]
 {background-position: -200% -1500%;}
 
 /* Grid pos 0,16 'motes */
-a[href|="/rarirdsalute"], a[href|="/flutterdoubt"]
+a[href|="/rarirdsalute"], a[href|="/flutterdoubt"], a[href|="/derpypuzzled"]
 {background-position: 0 -1600%;}
 
 /* Grid pos 1,16 'motes */
-a[href|="/rarirdscared"], a[href|="/dashdoubt"]
+a[href|="/rarirdscared"], a[href|="/dashdoubt"], a[href|="/derpywink"]
 {background-position: -100% -1600%;}
 
 /* Grid pos 2,16 'motes */
-a[href|="/rarirdsitting"], a[href|="/buzzlestia"]
+a[href|="/rarirdsitting"], a[href|="/buzzlestia"], a[href|="/derpyworry"]
 {background-position: -200% -1600%;}
 
 /* Grid pos 0,17 'motes */
-a[href|="/twippseesyou"], a[href|="/cloudkicker"]
+a[href|="/twippseesyou"], a[href|="/cloudkicker"],  a[href|="/starlightscience"]
 {background-position: 0 -1700%;}
 
 /* Grid pos 1,17 'motes */
-a[href|="/twippjoy"], a[href|="/bigmacgrin"]
+a[href|="/twippjoy"], a[href|="/bigmacgrin"], a[href|="/derpyohno"]
 {background-position: -100% -1700%;}
 
 /* Grid pos 2,17 'motes */
-a[href|="/twihuhhuh"], a[href|="/tiarachins"], a[href|="/2chinz"]
+a[href|="/twihuhhuh"], a[href|="/tiarachins"], a[href|="/2chinz"], a[href|="/sunsetdisturbed"]
 {background-position: -200% -1700%;}
 
 /* Grid pos 0,18 'motes */
@@ -1219,3 +1219,4 @@ a[href|="/dontsleeptonight"] {width:120px;height:120px;background-position: -120
 a[href|="/buttstho"] {width:117px;height:120px;background-position: -240px -250px}
 a[href|="/humantwiblush"] {width:96px;height:130px;background-position: -256px -370px}
 a[href|="/dashplace"] {width:114px;height:180px;background-position: -352px -370px}
+a[href|="/tavibedhead"] {width:150px;height:134px;background-position: -466px -370px}
