Stylesheet/emote/tag updates 2017-07-07

--- a/source-css/mlpgabby.css
+++ b/source-css/mlpgabby.css
@@ -1,6 +1,6 @@
 /* Emote Sheet gabbymotes01 */ 
 
-a[href="/gabbybeam"], a[href="/gabbybetes"], a[href="/gabbycute"], a[href="/gabbyexplain"], a[href="/gabbygriffon"], a[href="/gabbyhappy"], a[href="/gabbyhope"], a[href="/gabbynerd"], a[href="/gabbyplease"], a[href="/gabbysalute"], a[href="/gabbysing"], a[href="/gabbysmile"], a[href="/gabbyupset"], a[href="/gabbywhoa"], a[href="/gabbyhappy"], a[href="/gabbywink"], a[href="/gabbylistening"]{
+a[href="/gabbybeam"], a[href="/gabbybetes"], a[href="/gabbycute"], a[href="/gabbyexplain"], a[href="/gabbygriffon"], a[href="/gabbyhappy"], a[href="/gabbyhope"], a[href="/gabbynerd"], a[href="/gabbyplease"], a[href="/gabbysalute"], a[href="/gabbysing"], a[href="/gabbysmile"], a[href="/gabbyupset"], a[href="/gabbywhoa"], a[href="/gabbyhappy"], a[href="/gabbywink"], a[href="/gabbylistening"], a[href="/gabbygirl"], a[href="/gabbyidea"], a[href="/gabbynervous"], a[href="/gabbysad"]{
 
   display:block;
 
@@ -165,6 +165,46 @@ a[href|="/gabbywink"]{
 a[href|="/gabbylistening"]{
 
   background-position:-210px -210px;
+
+  width:70px;
+
+  height:70px;
+
+}
+
+a[href|="/gabbygirl"]{
+
+  background-position:-0px -280px;
+
+  width:70px;
+
+  height:70px;
+
+}
+
+a[href|="/gabbyidea"]{
+
+  background-position:-70px -280px;
+
+  width:70px;
+
+  height:70px;
+
+}
+
+a[href|="/gabbynervous"]{
+
+  background-position:-140px -280px;
+
+  width:70px;
+
+  height:70px;
+
+}
+
+a[href|="/gabbysad"]{
+
+  background-position:-210px -280px;
 
   width:70px;
 
