--- a/source-css/ponymotes.css
+++ b/source-css/ponymotes.css
@@ -447,7 +447,7 @@ a[href|="/twithatsnice"], a[href|="/buysomeapples"], a[href|="/cadsoawesome"], a
 {background-image:url(%%70x70b%%);width:70px;height:70px;display:block;float:left;}
 
 /* 70x70c 'motes */
-a[href|="/trixcookie"], a[href|="/spitfirejudge"], a[href|="/marblescared"], a[href|="/apathiawhat"], a[href|="/changelingsad"], a[href|="/sadtwilight"], a[href|="/sadtwilight2"], a[href|="/twicheesy"], a[href|="/fritterugh"], a[href|="/frittugh"], a[href|="/celestiahh"], a[href|="/nervoustrixie"], a[href|="/youkickedthepuppy"], a[href|="/disreally"], a[href|="/ssshy"], a[href|="/ajangry"], a[href|="/twidisappointed"], a[href|="/sadscoots"], a[href|="/rdspeechless"], a[href|="/scootadrunk"], a[href|="/didneyland"], a[href|="/DIDNEYLAND"], a[href|="/ssawe"], a[href|="/crazyfs"], a[href|="/fstwicrazy"], a[href|="/flutterconfused"], a[href|="/changelingmad"], a[href|="/celoohshiny"], a[href|="/mayormare"], a[href|="/ppcuteshrug"], a[href|="/riffyeah"], a[href|="/supersmugdash"], a[href|="/rdyes"], a[href|="/starlightbeam"], a[href|="/nervousshy"], a[href|="/quibblepants"], a[href|="/moondancerexcited"], a[href|="/ajuwotm8"], a[href|="/ajuwatm8"], a[href|="/celestiawtf"], a[href|="/dragonlordtorch"], a[href|="/rdwutbag"], a[href|="/moondancercrazy"], a[href|="/moondancersquint"], a[href|="/whofarted"], a[href|="/ajwingspanked"], a[href|="/sadtwilight3"], a[href|="/yaksmash"], a[href|="/twiwatstare"], a[href|="/zecoraponder"], a[href|="/twilightpbbt"], a[href|="/celestiapout"], a[href|="/pinkiesly"], a[href|="/flurrywink"], a[href|="/derpypuzzled"], a[href|="/derpywink"], a[href|="/derpyworry"], a[href|="/starlightscience"], a[href|="/derpyohno"], a[href|="/sunsetdisturbed"]
+a[href|="/trixcookie"], a[href|="/spitfirejudge"], a[href|="/marblescared"], a[href|="/apathiawhat"], a[href|="/changelingsad"], a[href|="/sadtwilight"], a[href|="/sadtwilight2"], a[href|="/twicheesy"], a[href|="/fritterugh"], a[href|="/frittugh"], a[href|="/celestiahh"], a[href|="/nervoustrixie"], a[href|="/youkickedthepuppy"], a[href|="/disreally"], a[href|="/ssshy"], a[href|="/ajangry"], a[href|="/twidisappointed"], a[href|="/sadscoots"], a[href|="/rdspeechless"], a[href|="/scootadrunk"], a[href|="/didneyland"], a[href|="/DIDNEYLAND"], a[href|="/ssawe"], a[href|="/crazyfs"], a[href|="/fstwicrazy"], a[href|="/flutterconfused"], a[href|="/changelingmad"], a[href|="/celoohshiny"], a[href|="/mayormare"], a[href|="/ppcuteshrug"], a[href|="/riffyeah"], a[href|="/supersmugdash"], a[href|="/rdyes"], a[href|="/starlightbeam"], a[href|="/nervousshy"], a[href|="/quibblepants"], a[href|="/moondancerexcited"], a[href|="/ajuwotm8"], a[href|="/ajuwatm8"], a[href|="/celestiawtf"], a[href|="/dragonlordtorch"], a[href|="/rdwutbag"], a[href|="/moondancercrazy"], a[href|="/moondancersquint"], a[href|="/whofarted"], a[href|="/ajwingspanked"], a[href|="/sadtwilight3"], a[href|="/yaksmash"], a[href|="/twiwatstare"], a[href|="/zecoraponder"], a[href|="/twilightpbbt"], a[href|="/celestiapout"], a[href|="/pinkiesly"], a[href|="/flurrywink"], a[href|="/derpypuzzled"], a[href|="/derpywink"], a[href|="/derpyworry"], a[href|="/starlightscience"], a[href|="/derpyohno"], a[href|="/sunsetdisturbed"], a[href|="/supapie"], a[href|="/supajack"], a[href|="/supashy"], a[href|="/supadash"], a[href|="/faustdisapproves"]
 {background-image:url(%%70x70c%%);width:70px;height:70px;display:block;float:left;}
 
 /* 100x100a 'motes. */
@@ -796,23 +796,23 @@ a[href|="/twihuhhuh"], a[href|="/tiarachins"], a[href|="/2chinz"], a[href|="/sun
 {background-position: -200% -1700%;}
 
 /* Grid pos 0,18 'motes */
-a[href|="/twipinkieawe"], a[href|="/implylestia"]
+a[href|="/twipinkieawe"], a[href|="/implylestia"], a[href|="/supapie"]
 {background-position: 0 -1800%;}
 
 /* Grid pos 1,18 'motes */
-a[href|="/twipinkiepout"], a[href|="/cocowink"]
+a[href|="/twipinkiepout"], a[href|="/cocowink"], a[href|="/supajack"]
 {background-position: -100% -1800%;}
 
 /* Grid pos 2,18 'motes */
-a[href|="/twippfear"], a[href|="/macliquidpride"]
+a[href|="/twippfear"], a[href|="/macliquidpride"], a[href|="/supashy"]
 {background-position: -200% -1800%;}
 
 /* Grid pos 0,19 'motes */
-a[href|="/pptwicrazy"], a[href|="/disdainforplebs"]
+a[href|="/pptwicrazy"], a[href|="/disdainforplebs"], a[href|="/supadash"]
 {background-position: 0 -1900%;}
 
 /* Grid pos 1,19 'motes */
-a[href|="/pptwisad"], a[href|="/flutterdisapprove"]
+a[href|="/pptwisad"], a[href|="/flutterdisapprove"], a[href|="/faustdisapproves"]
 {background-position: -100% -1900%;}
 
 /* Grid pos 2,19 'motes */
