CSS updates for teapot

--- a/addon/bpmotes.css
+++ b/addon/bpmotes.css
@@ -659,12 +659,11 @@ word-break:normal;}
     justify-content: center;
 }
 
-a[href|="/teapot"]:hover + .bpm-emote {
+.bpmote-teapot:hover + .bpm-emote {
     width: 70px !important;
     height: 70px !important;
-    background-image: url("//b.thumbs.redditmedia.com/xPK94sOv-Nd3SG_qc6ef2juI6-xYnhlPi8nhDDXCzwo.png") !important;
+    background-image: url("https://b.thumbs.redditmedia.com/GwhwUuRNzvh9kzxDqoBTmY_WbMAZh_K2wj_HoqCfW5g.png") !important;
     display: block;
     clear: none;
-    float: left;
-    background-position: -350px -0px !important;
+    background-position: 0px 0px !important;
 }
